--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -1,19 +1,4 @@
 @import "variables";
 @import "base";
 @import "special";
-@import "section-header";
-@import "navigation";
-@import "header-contacts";
-@import "section-hero";
-@import "button-zakaz";
-@import "backdrop";
-@import "modal";
-@import "form";
-@import "section-approach";
-@import "section-what-we-do";
-@import "section-team";
-@import "section-client";
-@import "section-footer";
-@import "subscription";
-@import "page-portfolio";
-@import "section-card-set";
+@import "../mob-version/header";
