--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -2,3 +2,6 @@
 @import "base";
 @import "special";
 @import "../mob-version/header";
+@import "../mob-version/hero";
+@import "../mob-version/modal";
+@import "../mob-version/approach";
