--- a/css/main.css
+++ b/css/main.css
@@ -76,23 +76,22 @@ a {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  border-bottom: solide 1px var(--border-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .nav {
-    max-width: 480px;
+    max-width: 1200px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .nav {
     max-width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .nav {
-    max-width: 1200px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-bottom: solide 1px var(--border-color);
   }
 }
 
@@ -103,6 +102,10 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 100%;
 }
 
 .nav__list {
@@ -116,6 +119,12 @@ a {
   display: flex;
 }
 
+@media screen and (max-width: 768px) {
+  .nav__list {
+    display: none;
+  }
+}
+
 .contacts {
   -ms-flex-pack: distribute;
       justify-content: space-around;
@@ -125,6 +134,64 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  .contacts {
+    display: none;
+  }
+  .contacts__Information:hover {
+    color: var(--blue-text);
+    -webkit-transition: color 250ms var(--cubic);
+    transition: color 250ms var(--cubic);
+  }
+  .contacts__Information--mail-color {
+    font-family: "roboto";
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--grey-text);
+    letter-spacing: 0.02em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contacts__Information {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-family: "roboto";
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--grey-text);
+    letter-spacing: 0.02em;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 768px) and (max-width: 768px) {
+  .contacts__Information {
+    font-size: 34px;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    color: var(--blue-text);
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .contacts__svg {
+    margin-right: 10px;
+    fill: currentColor;
+  }
 }
 
 .nav__logo--web {
@@ -174,13 +241,595 @@ a {
   bottom: -1px;
 }
 
+@media screen and (max-width: 768px) {
+  .nav__page--active .nav__page::after {
+    content: "";
+    display: none;
+  }
+}
+
 .nav__page {
-  margin-left: 50px;
-  padding: 32px 0;
   font-family: "roboto";
   font-size: 14px;
   font-weight: 500;
   color: var(--black-text);
   letter-spacing: 0.02em;
+}
+
+@media screen and (max-width: 768px) {
+  .nav__page {
+    font-size: 40px;
+    font-weight: 500;
+  }
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+}
+
+.mobile-menu__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile-menu__link {
+  font-family: "roboto";
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--blue-text);
+  letter-spacing: 0.02em;
+  padding-right: 5px;
+}
+
+.mobile-menu__cheat {
+  color: var(--border-modal-color);
+}
+
+.menu .link {
+  padding: 10px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.menu .link:hover,
+.menu .link:focus {
+  text-decoration: underline;
+}
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.mobile-menu__icon:hover, .mobile-menu__icon:focus {
+  fill: var(--blue-text);
+}
+
+.closeMenu-button__icon:hover, .closeMenu-button__icon:focus {
+  fill: var(--blue-text);
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: floralwhite;
+  z-index: 999;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms ease-in-out;
+  transition: -webkit-transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+.mobile-menu {
+  list-style: none;
+}
+
+.mobile-menu .link :not(last-child) {
+  display: block;
+  margin-bottom: 32px;
+}
+
+.hero {
+  background-color: var(--dark-grey-bac);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/bac/Img-bac-hero.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bac/Img-bac-hero.jpg);
+  background-repeat: no-repeat;
+  max-width: 1600px;
+  text-align: center;
+  background-size: cover;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bac/img-bg-hero-480x400@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bac/img-bg-hero-480x400@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bac/img-bg-hero-768x400.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bac/img-bg-hero-768x400.jpg");
+  }
+}
+
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bac/img-bg-hero-768x400@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bac/img-bg-hero-768x400@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bac/img-bg-hero-1600x600.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bac/img-bg-hero-1600x600.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/bac/img-bg-hero-1600x600@2x.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/bac/img-bg-hero-1600x600@2x.jpg");
+  }
+}
+
+.hero__container {
+  padding: 200px 0;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+@media screen and (max-width: 480px) {
+  .hero__container {
+    padding: 118px 0;
+    width: 480px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero__container {
+    padding: 118px 0;
+    width: 480px;
+  }
+}
+
+.hero__text {
+  font-family: "roboto";
+  font-size: 44px;
+  font-weight: 900;
+  color: var(--white-text);
+  text-transform: uppercase;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+}
+
+@media screen and (max-width: 768px) {
+  .hero__text {
+    font-size: 26px;
+  }
+}
+
+.button-zakaz {
+  margin-top: 30px;
+  border: 0;
+  padding: 10px 32px;
+  background-color: var(--blue-text);
+  color: var(--white-text);
+  display: inline-block;
+  border-radius: 4px;
+  font-family: "roboto";
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 0.06em;
+  line-height: 1.87;
+  -webkit-transition: background-color 250ms var(--cubic), color 250ms var(--cubic), -webkit-box-shadow 250ms var(--cubic);
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic), -webkit-box-shadow 250ms var(--cubic);
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic), box-shadow 250ms var(--cubic);
+  transition: background-color 250ms var(--cubic), color 250ms var(--cubic), box-shadow 250ms var(--cubic), -webkit-box-shadow 250ms var(--cubic);
+}
+
+.button-zakaz:hover {
+  color: var(--blue-text);
+  letter-spacing: 0.06em;
+  background-color: var(--white-text);
+}
+
+.hide {
+  height: 0px;
+  overflow: hidden;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--zatemnenya);
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  -webkit-transition: opacity 250ms var(--cubic);
+  transition: opacity 250ms var(--cubic);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: visible;
+}
+
+.backdrop.is-hidden .modal {
+  -webkit-transform: translate(-50%, -50%) scale(0.5);
+          transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal {
+  padding: 40px;
+  width: 528px;
+  height: 582px;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50%;
+  left: 50%;
+  background-color: var(--white-text);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  -webkit-transition: -webkit-transform 250ms var(--cubic);
+  transition: -webkit-transform 250ms var(--cubic);
+  transition: transform 250ms var(--cubic);
+  transition: transform 250ms var(--cubic), -webkit-transform 250ms var(--cubic);
+}
+
+.modal .modal__closed {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: white;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: var(--black);
+}
+
+.modal .modal__closed:hover,
+.modal .modal__closed:focus {
+  fill: var(--blue-text);
+}
+
+.modal__title {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-family: "roboto";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.form {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.form__field {
+  display: block;
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.form__field:nth-child(-n + 3) {
+  margin-bottom: 28px;
+}
+
+.form__label {
+  position: absolute;
+  top: -50%;
+  left: 0px;
+  color: var(--grey-text);
+}
+
+.form__input {
+  padding: 10px 10px 10px 40px;
+  width: 100%;
+  font-size: 16px;
+  line-height: 1.16;
+  font: inherit;
+  border-radius: 4px;
+  border: 1px solid var(--border-modal-color);
+}
+
+.form__input:hover,
+.form__input:focus {
+  border: 1px solid var(--blue-text);
+}
+
+.form__icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  fill: var(--black-text);
+}
+
+.form__input:focus ~ .form__icon,
+.form__input:hover ~ .form__icon {
+  fill: var(--blue-text);
+}
+
+.form__textarea {
+  width: 100%;
+  border: 1px solid var(--border-modal-color);
+  padding: 12px;
+  display: block;
+  resize: none;
+}
+
+.form__textarea:hover {
+  border-color: var(--blue-text);
+}
+
+.form__field .coment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  top: -50%;
+  color: var(--grey-text);
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
+.form__textarea::-webkit-input-placeholder {
+  font-family: "Roboto";
+  color: var(--placeholder);
+  font-size: 14px;
+  line-height: 1.16;
+}
+
+.form__textarea:-ms-input-placeholder {
+  font-family: "Roboto";
+  color: var(--placeholder);
+  font-size: 14px;
+  line-height: 1.16;
+}
+
+.form__textarea::-ms-input-placeholder {
+  font-family: "Roboto";
+  color: var(--placeholder);
+  font-size: 14px;
+  line-height: 1.16;
+}
+
+.form__textarea::placeholder {
+  font-family: "Roboto";
+  color: var(--placeholder);
+  font-size: 14px;
+  line-height: 1.16;
+}
+
+/* ------------------------ */
+.form__agree {
+  color: var(--grey-text);
+  font-family: "roboto";
+  font-size: 14px;
+  line-height: 1.714;
+  margin-left: 7px;
+  margin-right: 2px;
+}
+
+.form__botton {
+  margin-top: 30px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0;
+  width: 200px;
+  height: 50px;
+  background-color: var(--blue-text);
+  color: var(--buutom-bac);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+}
+
+.form__link {
+  color: var(--blue-text);
+  margin-left: 2px;
+  font-family: "roboto";
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+}
+
+.form__checkbox {
+  /* appearance: none; */
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.form__icon--check {
+  border: 2px solid var(--black-text);
+  border-radius: 2px;
+  margin-top: 10px;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.form__checkbox:checked + .form__icon--check {
+  border-color: transparent;
+  background-size: contain;
+  background-origin: border-box;
+  background-color: var(--blue-text);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.approach__container {
+  padding: 94px 0;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.approach-card__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (max-width: 480px) {
+  .approach-card__list {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .approach-card__list {
+    display: block;
+  }
+}
+
+.approach-card__inner {
+  padding: 25px 0 25px;
+  margin-bottom: 30px;
+  background-color: var(--buutom-bac);
+  border-radius: 4px;
+}
+
+.approach-card__svg {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.approach-card__title {
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--black-text);
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  line-height: 1.14;
+}
+
+.approach-card__text {
+  max-width: 270px;
+  font-family: "roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: var(--grey-text);
+  letter-spacing: 0.03em;
+  line-height: 1.71;
 }
 /*# sourceMappingURL=main.css.map */
