--- a/css/main.css
+++ b/css/main.css
@@ -807,6 +807,10 @@ a {
   border-radius: 4px;
 }
 
+.approach-card__inner :not:last-child {
+  margin-right: 30px;
+}
+
 .approach-card__svg {
   margin-left: auto;
   margin-right: auto;
@@ -814,6 +818,9 @@ a {
 }
 
 .approach-card__title {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "roboto";
   font-size: 14px;
   font-weight: 700;
@@ -823,13 +830,83 @@ a {
   line-height: 1.14;
 }
 
+@media screen and (max-width: 768px) {
+  .approach-card__title {
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+
 .approach-card__text {
-  max-width: 270px;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "roboto";
   font-size: 14px;
   font-weight: 400;
   color: var(--grey-text);
   letter-spacing: 0.03em;
   line-height: 1.71;
+}
+
+.what-we-do__container {
+  margin-bottom: 94px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.what-we-do__slogan {
+  padding-bottom: 50px;
+  text-align: center;
+  font-family: "roboto";
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--black-text);
+  letter-spacing: 0.03em;
+  line-height: 1.16;
+}
+
+.what-we-do-card__service {
+  overflow: hidden;
+  position: relative;
+}
+
+.what-we-do-card__service > .what-we-do-card__prefix {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  margin: 0;
+  width: 100%;
+  height: 70px;
+  font-family: "roboto";
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  background-color: var(--grey-prozoriy);
+  color: var(--white-text);
+}
+
+.what-we-do-card__prefix {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.what-we-do-card__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=main.css.map */
