--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -5,3 +5,4 @@
 @import "../mob-version/hero";
 @import "../mob-version/modal";
 @import "../mob-version/approach";
+@import "../mob-version/what-we-do";
