--- a/sass/mob-version/_approach.scss
+++ b/sass/mob-version/_approach.scss
@@ -27,12 +27,19 @@
   background-color: var(--buutom-bac);
   border-radius: 4px;
 }
+.approach-card__inner :not:last-child {
+  margin-right: 30px;
+}
 .approach-card__svg {
   margin-left: auto;
   margin-right: auto;
   display: block;
 }
 .approach-card__title {
+  text-align: center;
+
+  margin-left: auto;
+  margin-right: auto;
   font-family: "roboto";
   font-size: 14px;
   font-weight: 700;
@@ -41,8 +48,16 @@
   letter-spacing: 0.03em;
   line-height: 1.14;
 }
+@media screen and (max-width: 768px) {
+  .approach-card__title {
+    display: block;
+    margin-bottom: 10px;
+  }
+}
 .approach-card__text {
-  max-width: 270px;
+  margin-left: auto;
+  margin-right: auto;
+  //   max-width: 270px;
   font-family: "roboto";
   font-size: 14px;
   font-weight: 400;
@@ -50,3 +65,9 @@
   letter-spacing: 0.03em;
   line-height: 1.71;
 }
+
+// @media screen and (max-width: 768px) {
+//   .approach-card__text {
+//     min-width: 270pxo;
+//   }
+// }
