--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -20,6 +20,8 @@ li {
   margin: 0;
 }
 body {
+  margin-right: auto;
+  margin-left: auto;
   max-width: 1600px;
   background-color: var(--white-text);
 }
