--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -6,3 +6,5 @@
 @import "../mob-version/modal";
 @import "../mob-version/approach";
 @import "../mob-version/what-we-do";
+@import "../mob-version/team";
+@import "../mob-version/clients";
