--- a/sass/mob-version/_what-we-do.scss
+++ b/sass/mob-version/_what-we-do.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 768px) {
+  .what-we-do {
+    display: none;
+  }
+}
+
 .what-we-do__container {
   margin-bottom: 94px;
   max-width: 1200px;
