--- a/sass/mob-version/_hero.scss
+++ b/sass/mob-version/_hero.scss
@@ -5,9 +5,9 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/bac/Img-bac-hero.jpg);
+    url(../images/bac/Img-bac-hero-480x400.jpg);
   background-repeat: no-repeat;
-  max-width: 1600px;
+  background-position: center;
   text-align: center;
   background-size: cover;
   margin-left: auto;
@@ -78,6 +78,7 @@
 }
 
 .hero__container {
+  justify-content: center;
   padding: 200px 0;
   max-width: 1200px;
   margin-left: auto;
@@ -85,20 +86,29 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+
 @media screen and (max-width: 480px) {
+  .hero__container {
+    padding: 118px 0;
+
+    height: 100%;
+  }
+}
+@media screen and (min-width: 480px) {
   .hero__container {
     padding: 118px 0;
     width: 480px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1200px) {
   .hero__container {
-    padding: 118px 0;
-    width: 480px;
+    // width: 768px;
+    padding: 200px 0;
   }
 }
 
 .hero__text {
+  align-items: center;
   font-family: "roboto";
   font-size: 44px;
   font-weight: 900;
@@ -107,7 +117,7 @@
   line-height: 1.36;
   letter-spacing: 0.06em;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .hero__text {
     font-size: 26px;
   }
