--- a/css/styles.css
+++ b/css/styles.css
@@ -394,7 +394,7 @@ a {
 
 /* --------Блок лапші--------- */
 
-.approach__container {
+.approach {
   padding: 94px 0;
   max-width: 1200px;
   margin-left: auto;
