--- a/css/main.css
+++ b/css/main.css
@@ -461,18 +461,22 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 200px 0;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 480px) {
   .hero__container {
     padding: 118px 0;
-    height: 100%;
+    height: 400px;
   }
 }
 
@@ -486,6 +490,12 @@ a {
 @media screen and (min-width: 1200px) {
   .hero__container {
     padding: 200px 0;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .hero__container {
+    height: 400px;
   }
 }
 
@@ -796,7 +806,7 @@ a {
           box-shadow: none;
 }
 
-.approach__container {
+.approach {
   padding: 94px 0;
   max-width: 1200px;
   margin-left: auto;
@@ -827,8 +837,14 @@ a {
   border-radius: 4px;
 }
 
-.approach-card__inner :not:last-child {
+.approach-card__inner:not(:last-child) {
   margin-right: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .approach-card__inner {
+    margin-right: 0;
+  }
 }
 
 .approach-card__svg {
