--- a/sass/mob-version/_approach.scss
+++ b/sass/mob-version/_approach.scss
@@ -1,4 +1,4 @@
-.approach__container {
+.approach {
   padding: 94px 0;
   max-width: 1200px;
   margin-left: auto;
@@ -27,8 +27,13 @@
   background-color: var(--buutom-bac);
   border-radius: 4px;
 }
-.approach-card__inner :not:last-child {
+.approach-card__inner:not(:last-child) {
   margin-right: 30px;
+}
+@media screen and (max-width: 768px) {
+  .approach-card__inner {
+    margin-right: 0;
+  }
 }
 .approach-card__svg {
   margin-left: auto;
@@ -57,7 +62,7 @@
 .approach-card__text {
   margin-left: auto;
   margin-right: auto;
-  //   max-width: 270px;
+
   font-family: "roboto";
   font-size: 14px;
   font-weight: 400;
@@ -65,9 +70,3 @@
   letter-spacing: 0.03em;
   line-height: 1.71;
 }
-
-// @media screen and (max-width: 768px) {
-//   .approach-card__text {
-//     min-width: 270pxo;
-//   }
-// }
