--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --social-networks: rgba(175, 177, 184, 1);
   --overlay-color: rgba(33, 150, 243, 0.9);
@@ -420,6 +419,7 @@ a {
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -804,334 +804,5 @@ a {
   background-color: var(--blue-text);
   -webkit-box-shadow: none;
           box-shadow: none;
-}
-
-.approach {
-  padding: 94px 0;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.approach-card__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-@media screen and (max-width: 768px) {
-  .approach-card__list {
-    display: block;
-  }
-}
-
-.approach-card__inner {
-  padding: 25px 0 25px;
-  margin-bottom: 30px;
-  background-color: var(--buutom-bac);
-  border-radius: 4px;
-}
-
-.approach-card__inner:not(:last-child) {
-  margin-right: 30px;
-}
-
-@media screen and (max-width: 768px) {
-  .approach-card__inner {
-    margin-right: 0;
-  }
-}
-
-.approach-card__svg {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
-.approach-card__title {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "roboto";
-  font-size: 14px;
-  font-weight: 700;
-  color: var(--black-text);
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-  line-height: 1.14;
-}
-
-@media screen and (max-width: 768px) {
-  .approach-card__title {
-    display: block;
-    margin-bottom: 10px;
-  }
-}
-
-.approach-card__text {
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "roboto";
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--grey-text);
-  letter-spacing: 0.03em;
-  line-height: 1.71;
-}
-
-@media screen and (max-width: 768px) {
-  .what-we-do {
-    display: none;
-  }
-}
-
-.what-we-do__container {
-  margin-bottom: 94px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.what-we-do__slogan {
-  padding-bottom: 50px;
-  text-align: center;
-  font-family: "roboto";
-  font-size: 36px;
-  font-weight: 700;
-  color: var(--black-text);
-  letter-spacing: 0.03em;
-  line-height: 1.16;
-}
-
-.what-we-do-card__service {
-  overflow: hidden;
-  position: relative;
-}
-
-.what-we-do-card__service > .what-we-do-card__prefix {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  margin: 0;
-  width: 100%;
-  height: 70px;
-  font-family: "roboto";
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  background-color: var(--grey-prozoriy);
-  color: var(--white-text);
-}
-
-.what-we-do-card__prefix {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.what-we-do-card__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.team {
-  background-color: var(--buutom-bac);
-}
-
-.team__container {
-  padding: 94px 0;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.team__slogan {
-  margin-bottom: 50px;
-  text-align: center;
-  font-family: "roboto";
-  font-size: 36px;
-  font-weight: 700;
-  color: var(--black-text);
-  letter-spacing: 0.03em;
-  line-height: 1.16;
-}
-
-.team__name {
-  margin-bottom: 10px;
-  font-family: "roboto";
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--black-dark-textt);
-  letter-spacing: 0.03em;
-  line-height: 1.18;
-}
-
-.team__text {
-  font-family: "roboto";
-  font-size: 16px;
-  font-weight: 400;
-  color: var(--grey-text);
-  letter-spacing: 0.03em;
-  line-height: 1.18;
-}
-
-.team__list-svg {
-  margin-top: 16px;
-  max-width: 270px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.team__social-link {
-  color: var(--social-networks);
-  width: 44px;
-  height: 44px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-radius: 50%;
-  fill: var(--social-networks);
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.team__svg {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  fill: currentColor;
-}
-
-.team__social-link:hover {
-  border-radius: 50%;
-  color: #ffffff;
-  background-color: var(--blue-text);
-}
-
-/* Карточки команди */
-.team__list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: calc(-1 * var(--team-card-set-gap));
-  margin-top: calc(-1 * var(--team-card-set-gap));
-}
-
-.team__list > .team__item {
-  -ms-flex-preferred-size: calc(100% / 4 - var(--card-set-gap));
-      flex-basis: calc(100% / 4 - var(--card-set-gap));
-  margin-left: var(--team-card-set-gap);
-  margin-top: var(--team-card-set-gap);
-}
-
-.team__card {
-  margin-bottom: 94px;
-  -webkit-box-shadow: var(--team-card-shadow);
-          box-shadow: var(--team-card-shadow);
-  border-radius: 0px 0px 4px 4px;
-  overflow: hidden;
-  background-color: var(--white-text);
-}
-
-.team__card-content {
-  text-align: center;
-  padding: 30px 32px;
-}
-
-.client {
-  padding: 94px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  text-align: center;
-}
-
-.client__title {
-  margin-bottom: 50px;
-  font-family: "roboto";
-  font-size: 36px;
-  font-weight: 700;
-  color: var(--black-text);
-  letter-spacing: 0.03em;
-  line-height: 1.16;
-}
-
-.client-card__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.client-card__link {
-  fill: var(--social-networks);
-  background-color: transparent;
-}
-
-.client-card__svg {
-  width: 170px;
-  height: 90px;
-  border-radius: 4px;
-  border: 2px solid currentColor;
-  color: var(--social-networks);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.client-card__svg:hover {
-  border-color: var(--blue-text);
-  fill: var(--blue-text);
 }
 /*# sourceMappingURL=main.css.map */
