--- a/sass/components/main.scss
+++ b/sass/components/main.scss
@@ -4,7 +4,7 @@
 @import "../mob-version/header";
 @import "../mob-version/hero";
 @import "../mob-version/modal";
-@import "../mob-version/approach";
-@import "../mob-version/what-we-do";
-@import "../mob-version/team";
-@import "../mob-version/clients";
+// @import "../mob-version/approach";
+// @import "../mob-version/what-we-do";
+// @import "../mob-version/team";
+// @import "../mob-version/clients";
