--- a/sass/mob-version/_hero.scss
+++ b/sass/mob-version/_hero.scss
@@ -12,6 +12,7 @@
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 @media (min-device-pixel-ratio: 2),
   (-webkit-min-device-pixel-ratio: 2),
