--- a/sass/mob-version/_header.scss
+++ b/sass/mob-version/_header.scss
@@ -29,6 +29,12 @@
     justify-content: space-between;
   }
 }
+@media screen and (max-width: 768px) {
+  .nav {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
 
 .nav__link {
   display: flex;
@@ -77,6 +83,7 @@
     letter-spacing: 0.02em;
     justify-content: center;
     align-items: center;
+    margin-top: 270px;
   }
   @media screen and (max-width: 768px) {
     .contacts__Information {
@@ -99,6 +106,8 @@
   font-size: 26px;
   letter-spacing: 0.03;
   line-height: 1.15;
+}
+@media screen and (max-width: 768px) {
 }
 
 .nav__logo--studio {
@@ -146,6 +155,7 @@
   font-weight: 500;
   color: var(--black-text);
   letter-spacing: 0.02em;
+  padding-top: 16px;
 }
 @media screen and (max-width: 768px) {
   .nav__page {
@@ -170,6 +180,8 @@
 }
 .mobile-menu__social {
   display: flex;
+  padding-bottom: 16px;
+  margin-top: 64px;
 }
 .mobile-menu__link {
   font-family: "roboto";
