--- a/sass/mob-version/_approach.scss
+++ b/sass/mob-version/_approach.scss
@@ -19,8 +19,7 @@
   margin-left: 30px;
   margin-top: 30px;
   // display: block;
-  flex-basis: calc((100% -120px) / 4);
-  min-width: 270px;
+  flex-basis: calc((100% - 120px) / 4);
 }
 
 .approach-card__inner {
