--- a/sass/mob-version/_approach.scss
+++ b/sass/mob-version/_approach.scss
@@ -9,13 +9,15 @@
 }
 
 .approach-card__list {
+  background-color: brown;
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  justify-content: space-between;
   margin-left: -30px;
   margin-top: -30px;
 }
 .approach__item {
+  background-color: aqua;
   flex-basis: calc((100% - 120px) / 4);
   margin-left: 30px;
   margin-top: 30px;
